# shopsphere-data-generator

./: .gitignore  ERD.md  GENERATOR_CHANGES.md  PROGRESS.md  README.md  generate.py  load_postgres.py  prompt.md  pyproject.toml  requirements.txt
config/: settings.py
src/: main.py  utils.py
src/generators/: customers.py  dim_date.py  marketing.py  orders.py  payments.py  products.py  reviews.py  subscriptions.py  support_tickets.py  website_events.py
