[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shopsphere-data-generator"
version = "1.0.0"
description = "Realistic ecommerce data generator for ShopSphere analytics portfolio"
requires-python = ">=3.12"
dependencies = [
    "faker>=24.4.0",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "pyarrow>=15.0.2",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "tqdm>=4.66.2",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
]

[project.scripts]
shopsphere-generate = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
